--- a/cookie.html
+++ b/cookie.html
@@ -41,7 +41,7 @@ function checkCookie() {
 
 function delCookie()
 {
-  document.cookie = "2021web=; max-age=0; path=/";
+  document.cookie = "username=; max-age=0; path=/";
 }
   
 
