--- a/cookie.html
+++ b/cookie.html
@@ -26,7 +26,7 @@ function getCookie(cname) {
 }
 
 function checkCookie() {
-  var user=getCookie("2021web");
+  var user=getCookie("username");
   console.log(user);
   if (user != "" ) {
     alert("また見てくれてありがとう！" + user);
